# acp-mcp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
src/: main.rs  state.rs
src/mcp/: mod.rs  service.rs  tools.rs
src/primer/: mod.rs  rendering.rs  scoring.rs  selection.rs  state.rs  types.rs
