[package]
name = "acp-mcp"
version = "0.2.0"
edition = "2021"
authors = ["ACP Contributors"]
description = "ACP MCP Server - Model Context Protocol for AI tools"
license = "MIT"
repository = "https://github.com/acp-protocol/acp-mcp"
keywords = ["ai", "mcp", "claude", "llm", "context"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "acp-mcp"
path = "src/main.rs"

[dependencies]
# Core ACP library (use local path for development, version for release)
acp = { path = "../acp-cli", package = "acp-protocol" }
# acp = { version = "0.3.0", package = "acp-protocol" }

# MCP - Model Context Protocol
rmcp = { version = "0.8", features = ["server", "transport-io", "macros"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Template rendering for primer generation
handlebars = "6.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.15"
